# ShapesEngine2

./: .gitignore  .gitmodules  CMakeLists.txt  tasks.txt
assets/configs/: commands.xml  fonts.xml  input.xml  meta.xml  shaders.xml  sprites.xml  systems.xml  test_load.xml  textures.xml  window.xml
assets/configs/maps/: map_test.xml
assets/scripts/: test.lua
assets/shaders/: Grid.frag  Grid.vert  SimpleTex.frag  SimpleTex.vert  simpleColor.frag
assets/ui/: test_window.xml
cmake/imgui/: CMakeLists.txt  CmakeLists.txt
cmake/imgui_sdl/: CMakeLists.txt
cmake/lua/: CMakeLists.txt  CmakeLists.txt
cmake/tinyxml2/: CMakeLists.txt
src/: Game.cpp  Game.h  Logger.cpp  Logger.h  main.cpp
src/Actions/: ActionBase.h  PausePhysicsAction.cpp  PausePhysicsAction.h  ResetPhysicsAccumulatedTimeAction.cpp  ResetPhysicsAccumulatedTimeAction.h
src/Commands/: CameraMouseMoveCommand.cpp  CameraMouseMoveCommand.h  CameraMoveCommand.cpp  CameraMoveCommand.h  CameraZoomCommand.cpp  CameraZoomCommand.h  Command.cpp  Command.h  CommandContext.h  FireCommand.cpp  FireCommand.h  MoveCommands.cpp  MoveCommands.h  PauseGameCommand.cpp  PauseGameCommand.h  PauseGameEventCommand.cpp  PauseGameEventCommand.h  RotateCommand.cpp  RotateCommand.h
src/Commands/Loaders/: CameraMouseMoveCommandLoader.cpp  CameraMouseMoveCommandLoader.h  CameraMoveCommandLoader.cpp  CameraMoveCommandLoader.h  CameraZoomCommandLoader.cpp  CameraZoomCommandLoader.h  InputCommandLoader.cpp  InputCommandLoader.h  InputCommandsLoadersCollection.cpp  InputCommandsLoadersCollection.h  MoveCommandLoader.cpp  MoveCommandLoader.h  PauseGameCommandLoader.cpp  PauseGameCommandLoader.h  PauseGameEventCommandLoader.cpp  PauseGameEventCommandLoader.h  RotateCommandLoader.cpp  RotateCommandLoader.h
src/Components/: Transform.h
src/Conditions/: AndCondition.cpp  AndCondition.h  ConditionBase.h  OrCondition.cpp  OrCondition.h
src/Conditions/Loaders/: ConditionLoadersCollection.h  ConditionsLoader.h
src/Context/: ContextBase.h
src/ECS/: EcsWorld.cpp  EcsWorld.h  Entity.cpp  Entity.h  SystemsFactory.cpp  SystemsFactory.h  SystemsFactoryRegistration.h  SystemsListLoader.cpp  SystemsListLoader.h  SystemsManager.cpp  SystemsManager.h  SystemsRegistration.cpp  SystemsRegistration.h  World.cpp  World.h
src/ECS/Components/: Common.cpp  Common.h  Physics.cpp  Physics.h  Render.cpp  Render.h  SDLComponents.cpp  SDLComponents.h  SfmlComponents.h  TagComponent.h  Transform.h  Velocity.h
src/ECS/Systems/: BaseInputSystem.h  BaseSystem.cpp  BaseSystem.h  BoundingBoxDebugSystem.cpp  BoundingBoxDebugSystem.h  BulletSystem.cpp  BulletSystem.h  CameraFollowSystem.cpp  CameraFollowSystem.h  CameraSystem.cpp  CameraSystem.h  CleanupSystem.cpp  CleanupSystem.h  CollisionCleanupSystem.cpp  CollisionCleanupSystem.h  CollisionSystem.cpp  CollisionSystem.h  DamageSystem.cpp  DamageSystem.h  InputCommandsCollection.cpp  InputCommandsCollection.h  IntertiaSystem.cpp  IntertiaSystem.h  ManualTransformSystem.cpp  ManualTransformSystem.h  MapLoaderSystem.cpp  MapLoaderSystem.h  MovementSystem.cpp  MovementSystem.h  ObjectsAssetsCollectonSystem.cpp  ObjectsAssetsCollectonSystem.h  PhysicsBox2DSystem.cpp  PhysicsBox2DSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  RenderSystem.cpp  RenderSystem.h  ResourcesManagerHolderSystem.cpp  ResourcesManagerHolderSystem.h  RotationSystem.cpp  (+32 more)
src/Enums/: AnimationTypeEnum.h  ButtonSpriteEnum.h  Direction.h  EnumMacro.h  InputEventTypeEnum.h  MouseButtonEnum.h  RigidBodyType.h  SpriteTypeEnum.h
src/Game/: Camera.cpp  Camera.h  CameraManager.h  CollisionListener.cpp  CollisionListener.h  CommonLogic.h  Game.cpp  Game.h  GameFacade.cpp  GameFacade.h  GameWindow.cpp  GameWindow.h  ManagersProvider.cpp  ManagersProvider.h  MapLoader.cpp  MapLoader.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLWindow.cpp  OpenGLWindow.h  SDLGameWindow.cpp  SDLGameWindow.h  Time.cpp  Time.h  WeaponManager.cpp  WeaponManager.h
src/Input/: InputType.h
src/Loader/: Loader.h
src/Logger/: Logger.cpp  Logger.h
src/Messenger/: Messenger.cpp  Messenger.h  SubscriptionWrapper.h  SubscriptionsContainer.cpp  SubscriptionsContainer.h
src/Messenger/Events/: CollisionEvent.cpp  CollisionEvent.h  Common.cpp  Common.h  Editor.h  Event.h  Rendering.h  Sounds.h  UIEvents.cpp  UIEvents.h  Windows.h
src/Physics/: CollisionListener.cpp  CollisionListener.h
src/Registration/: Registration.h
src/Resources/: AssetsManager.cpp  AssetsManager.h  AssetsManagerBase.h  InputCommandsManager.cpp  InputCommandsManager.h  OpenGLTexturesManager.cpp  OpenGLTexturesManager.h  ResourcesManager.cpp  ResourcesManager.h  SDLTexturesManager.cpp  SDLTexturesManager.h  Shader.cpp  Shader.h  ShadersManager.cpp  ShadersManager.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
src/Serialization/: Asset.cpp  Asset.h  DataElementWrapper.cpp  DataElementWrapper.h  LoaderMacro.h  LoadersManager.cpp  LoadersManager.h  Serializable.cpp  Serializable.h  SerializableField.cpp  SerializableField.h  SerializableMacro.h  Serialization.cpp  Serialization.h  Serializer.h
src/Serialization/Loaders/: LoaderBase.h  LoaderDefault.h  LoaderECSComponent.h
src/Serialization/Types/: SerializableFieldAsset.cpp  SerializableFieldAsset.h  SerializableFieldAssetsList.cpp  SerializableFieldAssetsList.h  SerializableFieldBool.cpp  SerializableFieldBool.h  SerializableFieldColor.cpp  SerializableFieldColor.h  SerializableFieldFloat.cpp  SerializableFieldFloat.h  SerializableFieldFloatRect.cpp  SerializableFieldFloatRect.h  SerializableFieldFont.cpp  SerializableFieldFont.h  SerializableFieldInt.cpp  SerializableFieldInt.h  SerializableFieldIntRect.cpp  SerializableFieldIntRect.h  SerializableFieldListIntRect.cpp  (+26 more)
src/UI/: Node.cpp  Node.h  SfmlUIWindow.cpp  SfmlUIWindow.h  UIComponentRegistration.h  UINode.cpp  UINode.h  UIWindow.cpp  UIWindow.h  UIWindowContext.h  UIWindowLoader.cpp  UIWindowLoader.h  Window.cpp  Window.h
src/Utils/: Coords.cpp  Coords.h  FilePath.cpp  FilePath.h  Math.cpp  Math.h  Singleton.cpp  Singleton.h  Storage.cpp  Storage.h  Types.h  TypesDefines.h
(+112 files in other folders)
